--- a/project-files/monica-zmq-control/monica-zmq-control.vcxproj
+++ b/project-files/monica-zmq-control/monica-zmq-control.vcxproj
@@ -27,9 +27,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{B731CCE5-9E7E-47CD-8CB3-A87C277CE59C}</ProjectGuid>
+    <ProjectGuid>{50ACD881-A80A-4F13-9384-E5939F08CA48}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>monicazmqproxy</RootNamespace>
+    <RootNamespace>monicazmqcontrol</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -240,7 +240,7 @@
     <ClCompile Include="..\..\..\util\tools\helper.cpp" />
     <ClCompile Include="..\..\..\util\tools\json11-helper.cpp" />
     <ClCompile Include="..\..\..\util\tools\zmq-helper.cpp" />
-    <ClCompile Include="..\..\src\run\monica-zmq-proxy.cpp" />
+    <ClCompile Include="..\..\src\run\monica-zmq-control-main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\util\json11\json11.hpp" />
