--- a/project-files/monica-zmq-proxy/monica-zmq-proxy.vcxproj.filters
+++ b/project-files/monica-zmq-proxy/monica-zmq-proxy.vcxproj.filters
@@ -13,29 +13,20 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Header Files\json11">
-      <UniqueIdentifier>{6ab4128e-fcfe-4099-b70f-2a1608ff099f}</UniqueIdentifier>
+    <Filter Include="Source Files\tools">
+      <UniqueIdentifier>{dbef5862-6ccf-44f2-a98d-88cb79bd9821}</UniqueIdentifier>
     </Filter>
     <Filter Include="Header Files\tools">
-      <UniqueIdentifier>{6267d515-2bfe-42af-b83d-c7b4282177c2}</UniqueIdentifier>
+      <UniqueIdentifier>{84075413-f195-42e4-9797-ba7cccb8e667}</UniqueIdentifier>
     </Filter>
     <Filter Include="Source Files\json11">
-      <UniqueIdentifier>{921f2a81-64c6-40d7-824c-7e7ab4b8d2c4}</UniqueIdentifier>
+      <UniqueIdentifier>{388ddc27-56a0-45a7-9904-199885000b8f}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\tools">
-      <UniqueIdentifier>{6b917465-c93f-44a8-b511-b88da3ade462}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\monica">
-      <UniqueIdentifier>{211a6292-fd8f-4c97-8976-25f254b040ec}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\monica\run">
-      <UniqueIdentifier>{c467a742-70cf-48fa-86ad-5eca1eeefd7c}</UniqueIdentifier>
+    <Filter Include="Header Files\json11">
+      <UniqueIdentifier>{882c8c2b-b567-44d1-9b9b-4b48ee683829}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\util\json11\json11.cpp">
-      <Filter>Source Files\json11</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\util\tools\date.cpp">
       <Filter>Source Files\tools</Filter>
     </ClCompile>
@@ -48,17 +39,17 @@
     <ClCompile Include="..\..\..\util\tools\zmq-helper.cpp">
       <Filter>Source Files\tools</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\util\json11\json11.cpp">
+      <Filter>Source Files\json11</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\..\util\tools\debug.cpp">
       <Filter>Source Files\tools</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\run\monica-zmq-control.cpp">
-      <Filter>Source Files\monica\run</Filter>
+    <ClCompile Include="..\..\src\run\monica-zmq-proxy-main.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\util\json11\json11.hpp">
-      <Filter>Header Files\json11</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\util\tools\date.h">
       <Filter>Header Files\tools</Filter>
     </ClInclude>
@@ -70,6 +61,9 @@
     </ClInclude>
     <ClInclude Include="..\..\..\util\tools\zmq-helper.h">
       <Filter>Header Files\tools</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\util\json11\json11.hpp">
+      <Filter>Header Files\json11</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\util\tools\debug.h">
       <Filter>Header Files\tools</Filter>
