--- a/installer/Hohenfinow2/python/db-connections.ini
+++ b/installer/Hohenfinow2/python/db-connections.ini
@@ -2,10 +2,8 @@
 [db]
 
 [active-climate-db-schemas]
-wettreg
-;clm
-;star
 star2
+
 ; map abstract schema-names to database sections, to be used
 [abstract-schema]
 ; abstract schemata for climate data on climate data server
@@ -13,24 +11,11 @@ clm = db.climate-data-server
 wettreg = db.climate-data-server
 
 ; climate data on zalf server
-;clm = db.zalf-mysql
-;wettreg = db.zalf-mysql
-star = db.zalf-mysql
 star2 = db.zalf-mysql
-werex = db.zalf-mysql
-zalf-wettreg = db.zalf-mysql
 
 ; abstract schemata for data on zalf server
-landcare = db.zalf-mysql
-monica = db.monica.sqlite
 carbiocial = db.carbiocial.sqlite
-;monica = db.monica.sqlite
-monica_buek = db.zalf-mysql
-eom = db.eom.sqlite
-landcare-dss = db.landcare-dss.sqlite
-;eom = db.zalf-mysql
-eva2 = db.zalf-mysql
-write.eom = db.zalf-mysql.write
+monica = db.monica.sqlite
 
 ka5-soil-data = ka5-soil-data.sqlite
 
@@ -52,34 +37,13 @@ user =
 pwd =
 
 [db.zalf-mysql.schema]
-landcare = landcare
-star = klima
 star2 = star2
-zalf-wettreg = WETTREG
-werex = werex
-clm = clm
-wettreg = clm
-monica = monica
-monica_buek = monica
-elanus = elanus
-eom = eom
-movedb = eom
-eva2 = eva2
 
 [db.monica.sqlite]
 filename = ../../../sqlite-db/monica.sqlite
 
 [db.carbiocial.sqlite]
-filename = ../../../../carbiocial-project/monica/carbiocial.sqlite
-
-[db.monica-jv.sqlite]
-filename = sqlite-db/monica-jv.sqlite
-
-[db.eom.sqlite]
-filename = ../eom/eom.sqlite
-
-[db.landcare-dss.sqlite]
-filename = sqlite-db/landcare-dss.sqlite
+filename = carbiocial.sqlite
 
 [ka5-soil-data.sqlite]
 filename = ../../../sqlite-db/ka5-soil-data.sqlite
